# mlb-gumbo-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  go.mod  mlb-gumbo.go
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
lua/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.lua  (+4 more)
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  features.py  mlbgumbo_sdk.py  mlbgumbo_types.py  pyproject.toml
py/core/: context.py  control.py  operation.py  response.py  spec.py
py/entity/: game_data_entity.py  player_entity.py  schedule_entity.py  team_entity.py
py/feature/: audit_feature.py  base_feature.py  clienttrack_feature.py  idempotency_feature.py  log_feature.py  netsim_feature.py  retry_feature.py  streaming_feature.py  telemetry_feature.py  test_feature.py
py/test/: runner.py  test_exists.py  test_feature.py  test_game_data_direct.py  test_game_data_entity.py  test_netsim.py  test_pipeline.py  test_player_direct.py  test_player_entity.py  test_primary_utility.py  test_readme_examples.py  test_schedule_direct.py  test_schedule_entity.py  test_team_direct.py  test_team_entity.py
py/utility/: done.py  feature_add.py  feature_hook.py  feature_init.py  make_error.py  make_fetch_def.py  make_options.py  make_request.py  make_result.py  make_spec.py  make_url.py  prepare_auth.py  prepare_method.py  prepare_params.py  prepare_query.py  result_headers.py  transform_response.py
(+468 files in other folders)
